--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
-$lightgray: #414141;
-$darkgray: #1D1D1D;
+$lightgray: #616161;
+$midgray: #242424;
+$darkgray: #151515;
 
 @mixin transition-duration($duration){
     -o-transition-duration: $duration; /* Opera */
@@ -11,6 +12,12 @@ $darkgray: #1D1D1D;
 body {
     margin: 0;
     background-color: black;
+}
+
+div > button, div > header, div > section {
+    font-family: 'Anaheim';
+    font-size: 18px;
+    color: white;
 }
 
 .header {
@@ -29,9 +36,6 @@ body {
         padding: 16px 32px;
         text-align: left;
         display: inline-block;
-        font-family: 'Anaheim';
-        font-size: 18px;
-        font-weight: bold;
         color: white;
         @include transition-duration(0.4s);
         cursor: pointer;
@@ -42,4 +46,24 @@ body {
     justify-content: space-between;
     align-items: flex-end;
     padding: 2em 1em;
+}
+
+.manifest {
+    header {
+        background-color: $darkgray;
+        border-top: 1px solid $lightgray;
+        border-bottom: 1px solid $lightgray;
+        padding: 16px 32px;
+        color: white;
+    }
+
+    section {
+        background-color: $midgray;
+        border-top: 1px solid $lightgray;
+        padding: 16px 32px;
+    }
+
+    width: 100%;
+    padding: 2em 1.5em;
+    box-sizing: border-box;
 }
