👴🏻 Added webkit box-sizing

--- a/src/App.scss
+++ b/src/App.scss
@@ -66,4 +66,5 @@ div > button, div > header, div > section {
     width: 100%;
     padding: 2em 1.5em;
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
