--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@ div > button, div > header, div > section {
 .manifest {
   width: 100%;
   padding: 2em 1.5em;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box; }
   .manifest header {
     background-color: #151515;
     border-top: 1px solid #616161;
