--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 body {
+  display: flex;
+  height: 100vh;
   margin: 0;
   background-color: black; }
+
+.appContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%; }
 
 div > button, div > header, div > section {
   font-family: 'Anaheim';
@@ -16,23 +23,44 @@ div > button, div > header, div > section {
   .header img {
     width: 50%; }
   .header .dropdown {
-    width: 30%; }
-  .header button {
-    width: 100%;
-    background-color: #151515;
-    border: 2px solid #616161;
-    padding: 16px 32px;
-    text-align: left;
-    display: inline-block;
-    color: white;
-    -o-transition-duration: 0.4s;
-    /* Opera */
-    -moz-transition-duration: 0.4s;
-    /* Firefox */
-    -webkit-transition-duration: 0.4s;
-    /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer; }
+    width: 30%;
+    color: white; }
+    .header .dropdown button {
+      width: 100%;
+      background-color: #151515;
+      border: 2px solid #616161;
+      padding: 16px 32px;
+      text-align: left;
+      -o-transition-duration: 0.4s;
+      /* Opera */
+      -moz-transition-duration: 0.4s;
+      /* Firefox */
+      -webkit-transition-duration: 0.4s;
+      /* Safari */
+      transition-duration: 0.4s;
+      cursor: pointer;
+      outline: none; }
+    .header .dropdown button:hover {
+      background-color: #444444; }
+    .header .dropdown .content {
+      display: none;
+      position: absolute;
+      right: 1em; }
+      .header .dropdown .content button {
+        background-color: #242424;
+        padding: 12px 16px;
+        display: block;
+        border-top: none; }
+      .header .dropdown .content button:hover {
+        background-color: #444444; }
+    .header .dropdown .show {
+      display: block; }
+
+.viewer {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 0.5em; }
 
 .manifest {
   width: 100%;
