--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -24,26 +24,33 @@ div > button, div > header, div > section {
   .header img {
     height: 100%;
     opacity: 0.8; }
+  .header button {
+    width: 6em;
+    height: 2em;
+    background-color: #151515;
+    border: 2px solid #616161;
+    padding-left: 1em;
+    text-align: left;
+    -o-transition-duration: 0.4s;
+    /* Opera */
+    -moz-transition-duration: 0.4s;
+    /* Firefox */
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    outline: none; }
+  .header .manifest {
+    opacity: 0.6; }
+  .header button:hover {
+    background-color: #444444; }
   .header .dropdown {
     width: 20em;
     height: 2.5em;
     opacity: 0.6; }
     .header .dropdown button {
       width: 100%;
-      height: 100%;
-      background-color: #151515;
-      border: 2px solid #616161;
-      padding-left: 1em;
-      text-align: left;
-      -o-transition-duration: 0.4s;
-      /* Opera */
-      -moz-transition-duration: 0.4s;
-      /* Firefox */
-      -webkit-transition-duration: 0.4s;
-      /* Safari */
-      transition-duration: 0.4s;
-      cursor: pointer;
-      outline: none; }
+      height: 100%; }
     .header .dropdown button:hover {
       background-color: #444444; }
     .header .dropdown .content {
@@ -67,24 +74,7 @@ div > button, div > header, div > section {
     .header .dropdown .show {
       display: block; }
 
-#viewer {
+.viewer {
   display: flex;
   flex-direction: column;
   flex-grow: 1; }
-
-.manifest {
-  width: 100%;
-  padding: 2em 1.5em;
-  box-sizing: border-box; }
-  .manifest header {
-    background-color: #151515;
-    border-top: 1px solid #616161;
-    border-bottom: 1px solid #616161;
-    padding: 16px 32px;
-    color: white; }
-  .manifest section {
-    background-color: #242424;
-    border-top: 1px solid #616161;
-    padding: 16px 32px; }
-
-/*# sourceMappingURL=main.css.map */
