--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -3,10 +3,57 @@ body {
   margin: 0;
   background-color: black; }
 
-div > button, div > header, div > section {
+div > button, div > header, div > section, .contact {
   font-family: 'Anaheim';
   font-size: 18px;
   color: white; }
+
+.tech-top {
+  position: fixed;
+  top: 12vh;
+  width: 100%;
+  height: 5em;
+  display: flex;
+  justify-content: space-between;
+  padding: 3em 0;
+  z-index: 1; }
+
+.tech-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 5em;
+  display: flex;
+  justify-content: space-between;
+  padding: 3em 0;
+  z-index: 1; }
+
+.tech-image {
+  height: 100%;
+  margin: 0 3em;
+  visibility: hidden; }
+
+.contact {
+  position: fixed;
+  top: 12vh;
+  right: 0;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  padding: 3em 0;
+  z-index: 1; }
+  .contact div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 2em;
+    visibility: hidden; }
+    .contact div img {
+      width: 3em; }
+    .contact div span {
+      margin-left: 1em;
+      font-size: 24pt;
+      font-weight: bold; }
 
 .header {
   position: absolute;
@@ -20,7 +67,7 @@ div > button, div > header, div > section {
   justify-content: space-between;
   align-items: flex-end;
   padding: 1em 2em;
-  z-index: 1; }
+  z-index: 2; }
   .header img {
     height: 100%;
     opacity: 0.8; }
