--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -3,125 +3,106 @@ body {
   margin: 0;
   background-color: black; }
 
-div > button, div > header, div > section, .contact {
+button, div > header, div > section, .contact {
   font-family: 'Anaheim';
   font-size: 18px;
   color: white; }
 
-.tech-top {
-  position: fixed;
-  top: 12vh;
-  width: 100%;
-  height: 5em;
-  display: flex;
-  justify-content: space-between;
-  padding: 3em 0;
-  z-index: 1; }
-
-.tech-bottom {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 5em;
-  display: flex;
-  justify-content: space-between;
-  padding: 3em 0;
-  z-index: 1; }
-
-.tech-image {
-  height: 100%;
-  margin: 0 3em;
-  visibility: hidden; }
-
-.contact {
-  position: fixed;
-  top: 12vh;
-  right: 0;
-  width: 35%;
-  display: flex;
-  flex-direction: column;
-  padding: 3em 0;
-  z-index: 1; }
-  .contact div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 2em;
-    visibility: hidden; }
-    .contact div img {
-      width: 3em; }
-    .contact div span {
-      margin-left: 1em;
-      font-size: 24pt;
-      font-weight: bold; }
-
 .header {
   position: absolute;
-  left: 0;
   top: 0;
-  width: 100%;
-  height: 12vh;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding: 1em 2em;
-  z-index: 2; }
-  .header img {
-    height: 100%;
-    opacity: 0.8; }
-  .header button {
-    width: 6em;
-    height: 2em;
-    background-color: #151515;
-    border: 2px solid #616161;
-    padding-left: 1em;
-    text-align: left;
-    -o-transition-duration: 0.4s;
-    /* Opera */
-    -moz-transition-duration: 0.4s;
-    /* Firefox */
-    -webkit-transition-duration: 0.4s;
-    /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    outline: none; }
-  .header .manifest {
-    opacity: 0.6; }
-  .header button:hover {
-    background-color: #444444; }
-  .header .dropdown {
-    width: 20em;
-    height: 2.5em;
-    opacity: 0.6; }
-    .header .dropdown button {
-      width: 100%;
-      height: 100%; }
-    .header .dropdown button:hover {
-      background-color: #444444; }
-    .header .dropdown .content {
-      width: 30em;
-      display: none;
-      position: relative;
-      top: -2px;
-      right: 10em;
-      border: 2px solid #616161;
-      max-height: 20em;
-      overflow: scroll; }
-      .header .dropdown .content button {
-        display: flex;
-        justify-content: space-between;
-        background-color: #242424;
-        height: 2em;
-        border: none;
-        border-bottom: 2px solid #616161; }
-      .header .dropdown .content button:hover {
-        background-color: #444444; }
-    .header .dropdown .show {
-      display: block; }
+  left: 0;
+  width: 96vw;
+  margin: 2vh 2vw;
+  opacity: 0.8; }
+
+button {
+  position: absolute;
+  background-color: #151515;
+  border: 2px solid #616161;
+  padding-left: 1em;
+  margin: 4vh 2vw;
+  text-align: left;
+  -o-transition-duration: 0.4s;
+  /* Opera */
+  -moz-transition-duration: 0.4s;
+  /* Firefox */
+  -webkit-transition-duration: 0.4s;
+  /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  outline: none;
+  opacity: 0.6; }
+
+button:hover {
+  background-color: #444444; }
+
+button.manifest {
+  bottom: 0;
+  left: 0;
+  width: 45vw;
+  height: 10vh; }
 
 .viewer {
   display: flex;
   flex-direction: column;
-  flex-grow: 1; }
+  flex-grow: 1;
+  z-index: -1; }
+
+.dropdown {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 45vw;
+  height: 10vh;
+  margin: 4vh 2vw; }
+  .dropdown button {
+    width: 100%;
+    height: 100%;
+    margin: 0; }
+  .dropdown .content {
+    width: 50vw;
+    display: none;
+    position: relative;
+    right: 5vw;
+    bottom: 47.5vh;
+    border: 2px solid #616161;
+    max-height: 47vh;
+    overflow: scroll;
+    opacity: 0.8; }
+    .dropdown .content button {
+      width: 100%;
+      position: static;
+      display: flex;
+      justify-content: space-between;
+      background-color: #242424;
+      margin: 0;
+      height: 2em;
+      border: none;
+      border-bottom: 2px solid #616161; }
+  .dropdown .show {
+    display: block; }
+
+@media (min-width: 1024px) {
+  .header {
+    width: 40vw; }
+  button.manifest {
+    top: 0;
+    left: 50vw;
+    width: 10vw;
+    height: 5vh; }
+  .dropdown {
+    top: 0;
+    right: 10vw;
+    width: 10vw;
+    height: 5vh;
+    margin-bottom: 0; }
+    .dropdown button {
+      width: 20vw;
+      height: 100%; }
+    .dropdown .content {
+      width: 35vw;
+      right: 15vw;
+      top: 5vh;
+      bottom: auto;
+      max-height: 46vh; } }
