--- a/app/public/scss/manifest.scss
+++ b/app/public/scss/manifest.scss
@@ -19,18 +19,18 @@ body {
 
 div > button, div > header, div > section {
     font-family: 'Anaheim';
-    font-size: 18px;
+    font-size: 1.5vmin;
     color: white;
 }
 
 .header {
     img {
-        height: 100%;
+        width: 70%;
         opacity: 0.8;
     }
 
     button {
-        width: 10em;
+        width: 20%;
         height: 2.5em;
         opacity: 0.8;
         background-color: $darkgray;
@@ -93,4 +93,23 @@ div > button, div > header, div > section {
     padding: 0 1.5em;
     box-sizing: border-box;
     opacity: 0.8;
+}
+
+@media (min-width: 1024px) {
+    div > button, div > header, div > section {
+        font-size: 18px;
+    }
+
+    .header {
+        img {
+            width: initial;
+            height: 100%;
+        }
+
+        button {
+            width: 10em;
+        }
+
+        align-items: center;
+    }
 }
